--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="\css\cover.css" rel="stylesheet">
+    <link href="css\cover.css" rel="stylesheet">
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">
     
