--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h1>What is Front End Design</h1>
     <p class="lead">Put simply, the front end is a combination of two different elements: the graphic design (the look) and the user interface (the feel). Each of these is created independently, with most of the technical work going into the user interface using web languages like HTML, CSS, and JavaScript.</p>
     <p class="lead">
-      <a href="Learnmore.html" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+      <a href="Learnmore.html" class="btn btn-lg btn-secondary fw-bold border-white bg-info">Learn more</a>
     </p>
   </main>
 
